--- a/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
@@ -2,11 +2,23 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Inventário" x:Class="CollectorQi.Views.InventarioListaItemPage">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked"></ToolbarItem>
+        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked" x:Name="ToolBarPrint"></ToolbarItem>
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content BackgroundColor="#4E4E4E">
         <StackLayout BackgroundColor="#fff">
+
+            <Frame  HasShadow="true" Margin="10,5,10,5" CornerRadius="5"  OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" >
+                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Label x:Name="lblCodLocalizacao"  VerticalOptions="Start" HorizontalOptions="Start" Font="Small" FontAttributes="Bold"  />
+                </Grid>
+            </Frame>
+
+            
             <!--<Grid BackgroundColor="#4E4E4E" Opacity="1" Margin="5,10,1,1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -19,9 +31,9 @@
             </Grid> -->
             <!--=<SearchBar IsVisible="{Binding SearchMode}" Placeholder="Digite o código ou descrição do item..." Text="{Binding SearchText}"  x:Name="SearchBarItCodigo" TextChanged="Handle_TextChanged" PlaceholderColor="White" FontSize="Small"/>-->
 
-            <StackLayout  BackgroundColor="#fff" IsClippedToBounds="True" HorizontalOptions="FillAndExpand" VerticalOptions="Center" Padding="10, 10" Spacing="3">
 
-                <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,10,10,10" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" HeightRequest="30">
+            <StackLayout Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,2,12,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" HeightRequest="30">
 
                     <SearchBar IsVisible="{Binding SearchMode}" 
                                Placeholder="Digite o código ou descrição do item..." 
@@ -30,7 +42,7 @@
                                TextChanged="Handle_TextChanged" 
                                VerticalOptions="StartAndExpand"
                                HorizontalOptions="StartAndExpand"
-                               Margin="-10,0,0,0"
+                               Margin="0,0,0,0"
                                FontSize="Small"
                                Unfocused="SearchBarItCodigo_Unfocused"/>
                 </Frame>               
@@ -45,7 +57,7 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                    <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                                    <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,5,10,2" Padding="0,0,0,0" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="*"/>
@@ -55,7 +67,7 @@
                                                 <RowDefinition Height="Auto"/>
                                             </Grid.RowDefinitions>
 
-                                            <Grid Grid.Row="0" MinimumWidthRequest="20" Grid.RowSpan="4" Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="Center">
+                                            <Grid Grid.Row="0" MinimumWidthRequest="10" Grid.RowSpan="1" Grid.Column="1" Margin="0,5,0,0" HorizontalOptions="StartAndExpand" VerticalOptions="Center" >
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="*" />
                                                     <RowDefinition Height="*" />
@@ -67,8 +79,7 @@
                                                 <Label Text="{Binding StatusItemInventario}" Grid.Row="1"  FontSize="Micro" HorizontalOptions="Center" VerticalOptions="Start" />
                                             </Grid>
 
-                                            <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0" Padding="10">
-
+                                            <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="20,25,5,0"  >
                                                 <Grid HorizontalOptions="FillAndExpand">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="*" />
@@ -77,106 +88,9 @@
                                                         <ColumnDefinition Width="Auto" />
                                                         <ColumnDefinition Width="Auto" />
                                                     </Grid.ColumnDefinitions>
-                                                    <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold"  FontSize="Micro" />
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
-                                                    <!--<Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
-                                                    <!--<Label Grid.Row="0" Grid.Column="2" Text="{Binding __item__.DescItem}" LineBreakMode="TailTruncation"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
+                                                    <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold"  FontSize="Small" />
+                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Small" />
                                                 </Grid>
-                                                <!--<Grid HorizontalOptions="FillAndExpand">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*" />
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition Width="*" />
-                                                    </Grid.ColumnDefinitions>
-                                                    <Label Grid.Row="0" Grid.Column="0" Text="Lote: " FontAttributes="Bold"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodLote}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLote}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodLote}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                    <Label Grid.Row="0" Grid.Column="2" Text="{Binding DtUltEntr, StringFormat='{0:dd/MM/yyyy}'}" HorizontalTextAlignment="Start" VerticalTextAlignment="End"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodLote}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                </Grid>
-                                                <Grid HorizontalOptions="FillAndExpand">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*" />
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition Width="Auto" />
-                                                    </Grid.ColumnDefinitions>
-                                                    <Label Grid.Row="0" Grid.Column="0" Text="Referencia: " FontAttributes="Bold"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodRefer}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodRefer}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodRefer}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                </Grid>-->
-                                                <Grid HorizontalOptions="FillAndExpand">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*" />
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition Width="Auto" />
-                                                    </Grid.ColumnDefinitions>
-                                                    <Label Grid.Row="0" Grid.Column="0" Text="Localização: " FontAttributes="Bold"  FontSize="Micro">
-                                                        <!--<Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>-->
-                                                    </Label>
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLocaliz}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro">
-                                                        <Label.Triggers>
-                                                            <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
-                                                                <Setter Property="IsVisible" Value="False" />
-                                                                <Setter Property="HeightRequest" Value="0" />
-                                                            </DataTrigger>
-                                                        </Label.Triggers>
-                                                    </Label>
-                                                </Grid>
-                                             <!--   <Grid HorizontalOptions="FillAndExpand">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*" />
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition Width="Auto" />
-                                                    </Grid.ColumnDefinitions>
-                                                    <Label Grid.Row="0" Grid.Column="0" Text="Quantidade: " FontAttributes="Bold"  FontSize="Micro" />
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding Quantidade}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro" />
-                                                </Grid> -->
                                             </StackLayout>
                                         </Grid>
                                     </Frame>
@@ -186,6 +100,7 @@
                     </CollectionView>
                 </Grid>
 
+                <!--
                 <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -194,7 +109,7 @@
                     <Button x:Name="BtnImprimir" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                 Clicked="BtnImprimir_Clicked" Grid.Column="0" Text="Imprimir" TextColor="White" />
 
-                </Grid>
+                </Grid> -->
 
                 <!--<Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
