--- a/CollectorQi/Views/ESCL018/InventarioListaLocalizacaoPage.xaml
+++ b/CollectorQi/Views/ESCL018/InventarioListaLocalizacaoPage.xaml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Localiza Leitura da Etiqueta " x:Class="CollectorQi.Views.InventarioListaLocalizacaoPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked"></ToolbarItem>
+        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked" x:Name="ToolBarPrint"></ToolbarItem>
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
-            <Frame  HasShadow="true" Margin="10,10,10,10" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" >
+            <Frame  HasShadow="true" Margin="10,5,10,5" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" >
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <Label x:Name="lblCodEstabel"  VerticalOptions="Start" HorizontalOptions="Start" Font="Small" FontAttributes="Bold"  />
+                    <Label x:Name="lblCodDepos"  VerticalOptions="Start" HorizontalOptions="Start" Font="Small" FontAttributes="Bold"  />
                 </Grid>
             </Frame>
 
-
-            <StackLayout Spacing="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+            <StackLayout Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,2,12,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" HeightRequest="30">
 
                     <SearchBar IsVisible="{Binding SearchMode}" 
                                    Placeholder="Digite a etiqueta..." 
@@ -28,8 +27,8 @@
                                    TextChanged="Handle_TextChanged"
                                    VerticalOptions="StartAndExpand"
                                    HorizontalOptions="StartAndExpand"
-                                   Margin="-10,0,0,0"
-                                   FontSize="Small" Unfocused="SearchCodLocaliz_Unfocused"/>
+                                   Margin="0,0,0,0"
+                                   FontSize="Small" Unfocused="SearchCodLocaliz_Unfocused" HeightRequest="25"/>
                     <!--<Entry x:Name="txtEtiqueta" Placeholder="Digite a etiqueta.." VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" FontSize="Small" WidthRequest="400"/> -->
                 </Frame>
             </StackLayout>
@@ -46,13 +45,13 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                                <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                                <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,5,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="30"/>
+                                            <RowDefinition Height="20"/>
                                         </Grid.RowDefinitions>
 
                                         <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
@@ -64,8 +63,8 @@
                                                     <ColumnDefinition Width="Auto" />
                                                     <ColumnDefinition Width="Auto" />
                                                 </Grid.ColumnDefinitions>
-                                                <Label Grid.Row="0" Grid.Column="0" Text="Localização: " FontAttributes="Bold" FontSize="12" />
-                                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLocaliz}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="12" />
+                                                <Label Grid.Row="0" Grid.Column="0" Text="Localização: " FontAttributes="Bold" FontSize="Small" />
+                                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLocaliz}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Small" />
                                             </Grid>
                                         </StackLayout>
                                     </Grid>
@@ -82,9 +81,10 @@
                  <!--   <RowDefinition Height="Auto"/> -->
                 </Grid.RowDefinitions>
 
+                <!--
                 <Button x:Name="BtnBuscaEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                             Clicked="OnClick_BuscaEtiqueta" Grid.Row="0" Grid.Column="0" Text="Busca Etiqueta" TextColor="White" />
-
+                -->
               <!--  <Button x:Name="BtnProximo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="OnClick_Proximo" Grid.Row="1" Grid.Column="0" Text="Próximo" TextColor="White" /> -->
 
