--- a/CollectorQi/Views/GuardaMateriaisConfirmacaoLeituraItem.xaml
+++ b/CollectorQi/Views/GuardaMateriaisConfirmacaoLeituraItem.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Guarda Matériais Deposito Item" x:Class="CollectorQi.Views.GuardaMateriaisDepositoItemListaPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Confirmação Leitura Item" x:Class="CollectorQi.Views.GuardaMateriaisConfirmacaoLeituraItem">
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
             <Button x:Name="BtnTipoMovimento" Margin="10,10,10,10" BorderColor="#A5C3FA" FontSize="Small"  MinimumHeightRequest="70" BackgroundColor="{StaticResource TextColorPlaceHolder}" BorderRadius="7"
-                    Grid.Row="0" Grid.Column="0" Clicked="BtnTipoMovimento_Clicked" TextColor="#515151" />
+                    Grid.Row="0" Grid.Column="0" TextColor="#515151" />
 
             <CollectionView x:Name="cvGuardaMateriaisDepositoItem" ItemsSource="{Binding ObsGuardaMateriaisDepositoItem}" SelectionMode="Single" Margin="10,0,10,0">
                 <CollectionView.EmptyView>
@@ -54,8 +54,11 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Button x:Name="BtnLeituraEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                    Clicked="BtnLeituraEtiqueta_Clicked" Grid.Row="0" Grid.Column="0" Text="Leitura Etiqueta" TextColor="White" />
+                <Button x:Name="BtnConfirmaLeitura" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                     Clicked="BtnConfirmaLeitura_Clicked" Grid.Row="0" Grid.Column="0" Text="Confirmar Leitura" TextColor="White" />
+
+                <Button x:Name="BtnZerarSaldoItem" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                     Clicked="BtnZerarSaldoItem_Clicked" Grid.Row="1" Grid.Column="0" Text="Zerar Saldo Item" TextColor="White" />
             </Grid>
 
         </StackLayout>
