--- a/CollectorQi/Views/GuardaMateriaisDepositoListaPage.xaml
+++ b/CollectorQi/Views/GuardaMateriaisDepositoListaPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Guarda de Matériais Depósito" x:Class="CollectorQi.Views.GuardaMateriaisDepositoListaPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Guarda de Materiais Depósito" x:Class="CollectorQi.Views.GuardaMateriaisDepositoListaPage">
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
@@ -57,8 +57,7 @@
                                         </Grid.ColumnDefinitions>
                                         <Label Grid.Row="0" Grid.Column="0" Text="Código Deposito:" FontAttributes="Bold" FontSize="Micro" />
                                         <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodDepos}" FontSize="Micro" />
-                                    </Grid>
-                                    
+                                    </Grid>                                    
                                 </Grid>
 
                             </Frame>
