--- a/CollectorQi/Views/GuardaMateriaisDepositoItemListaPage.xaml
+++ b/CollectorQi/Views/GuardaMateriaisDepositoItemListaPage.xaml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Guarda Materiais Deposito Item" x:Class="CollectorQi.Views.GuardaMateriaisDepositoItemListaPage">
     <ContentPage.Content>
-        <!--<StackLayout BackgroundColor="#4E4E4E">-->
+        <!--<StackLayout BackgroundColor="#4E4E4E">-->       
+
         <StackLayout BackgroundColor="#fff">
+            
             <Button x:Name="BtnTipoMovimento" Margin="10,10,10,10" BorderColor="#A5C3FA" FontSize="Small"  MinimumHeightRequest="70" BackgroundColor="{StaticResource TextColorPlaceHolder}" BorderRadius="7"
                     Grid.Row="0" Grid.Column="0" Clicked="BtnTipoMovimento_Clicked" TextColor="#515151" />
+
+            <StackLayout Margin="10,5,10,5" Orientation="Horizontal">
+                <TableView HeightRequest="50" >
+                    <TableRoot >
+                        <TableSection >
+                            <SwitchCell Text="Sem Saldo" OnChanged="SwitchCell_OnChanged"></SwitchCell>
+                        </TableSection>
+                    </TableRoot>
+                </TableView>
+            </StackLayout>                  
 
             <CollectionView x:Name="cvGuardaMateriaisDepositoItem" ItemsSource="{Binding ObsGuardaMateriaisDepositoItem}" SelectionMode="Single" Margin="10,0,10,0">
                 <CollectionView.EmptyView>
@@ -48,7 +60,7 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-            <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+            <Grid Margin="10,5,10,5" Grid.Row="4"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
