--- a/CollectorQi/Views/ESCL018/InventarioListaLocalizacaoPage.xaml
+++ b/CollectorQi/Views/ESCL018/InventarioListaLocalizacaoPage.xaml
@@ -55,7 +55,7 @@
                                             <RowDefinition Height="Auto"/>
                                         </Grid.RowDefinitions>
 
-                                        <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
+                                        <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="15,10,15,0">
                                             <Grid HorizontalOptions="FillAndExpand">
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="*" />
@@ -70,17 +70,17 @@
                                         </StackLayout>
 
 
-                                        <Grid Grid.Row="0" MinimumWidthRequest="10" Grid.RowSpan="1" Grid.Column="1" Margin="0,5,0,0" HorizontalOptions="StartAndExpand" VerticalOptions="Center" >
+                                        <Grid Grid.Row="0" MinimumWidthRequest="10" Grid.RowSpan="1" Grid.Column="1" Margin="0,0,0,0" HorizontalOptions="StartAndExpand" VerticalOptions="Center" >
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="*" />
-                                                <RowDefinition Height="*" />
+                                                <!--RowDefinition Height="*" /> -->
                                             </Grid.RowDefinitions>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
 
                                             <Frame HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="Start" VerticalOptions="Start" Margin="0" Padding="0" BackgroundColor="Maroon">
-                                                <Label Text="7" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+                                                <Label Text="{Binding TotalFichas}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
                                             </Frame>
                                          </Grid>
                                     </Grid>
